[package]
name = "claude-video-transcribe"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variable management
dotenv = "0.15"

# Error handling
anyhow = "1.0"

# For base64 encoding (Gemini API requires base64)
base64 = "0.21"

# Tokio for async runtime
tokio = { version = "1.35", features = ["full"] }
